# universe_experiment

./: CMakeLists.txt  README.md  gaia.csv  gaia_new.csv  iv27a_catalog_clean.csv  iv27a_table3_clean.csv  make_stars  names.csv  stars_small.csv
docs/: index.html  label_debug.json  scene.json  script.js  stars.json  style.css
src/: body.hpp  catalog.cpp  catalog.hpp  gas_catalog.cpp  gas_catalog.hpp  json_writer.cpp  json_writer.hpp  main.cpp  projection.hpp  simulation.cpp  simulation.hpp  svg_writer.cpp  svg_writer.hpp
web/: index.html  script.js  style.css
